.ci-logs/last-build-error.log
Cannot remap modifiers because it does not exists in any of the targets [] or their parents.
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:2: error: class, interface, enum, or record expected
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:9: error: class, interface, enum, or record expected
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:10: error: class, interface, enum, or record expected
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:11: error: class, interface, enum, or record expected
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:12: error: class, interface, enum, or record expected
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:13: error: class, interface, enum, or record expected
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:14: error: class, interface, enum, or record expected
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:16: error: class, interface, enum, or record expected
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:17: error: class, interface, enum, or record expected
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:18: error: class, interface, enum, or record expected
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:19: error: class, interface, enum, or record expected
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:2: error: class, interface, enum, or record expected
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:9: error: class, interface, enum, or record expected
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:10: error: class, interface, enum, or record expected
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:11: error: class, interface, enum, or record expected
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:12: error: class, interface, enum, or record expected
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:13: error: class, interface, enum, or record expected
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:14: error: class, interface, enum, or record expected
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:16: error: class, interface, enum, or record expected
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:17: error: class, interface, enum, or record expected
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:18: error: class, interface, enum, or record expected
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:19: error: class, interface, enum, or record expected
---FULL TAIL---
^
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:12: error: class, interface, enum, or record expected
import net.minecraft.util.math.BlockPos;
^
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:13: error: class, interface, enum, or record expected
import net.minecraft.util.math.ChunkPos;
^
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:14: error: class, interface, enum, or record expected
import net.minecraft.world.chunk.*;
^
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:16: error: class, interface, enum, or record expected
import java.io.*;
^
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:17: error: class, interface, enum, or record expected
import java.nio.file.*;
^
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:18: error: class, interface, enum, or record expected
import java.util.*;
^
/home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:19: error: class, interface, enum, or record expected
import java.util.zip.Deflater;
^
11 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///home/runner/work/Azelux-Client/Azelux-Client/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava' (registered by plugin class 'org.gradle.api.plugins.JavaBasePlugin').
> Compilation failed; see the compiler output below.
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:2: error: class, interface, enum, or record expected
  bash
  ^
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:9: error: class, interface, enum, or record expected
  import net.minecraft.client.MinecraftClient;
  ^
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:10: error: class, interface, enum, or record expected
  import net.minecraft.nbt.*;
  ^
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:11: error: class, interface, enum, or record expected
  import net.minecraft.registry.Registries;
  ^
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:12: error: class, interface, enum, or record expected
  import net.minecraft.util.math.BlockPos;
  ^
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:13: error: class, interface, enum, or record expected
  import net.minecraft.util.math.ChunkPos;
  ^
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:14: error: class, interface, enum, or record expected
  import net.minecraft.world.chunk.*;
  ^
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:16: error: class, interface, enum, or record expected
  import java.io.*;
  ^
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:17: error: class, interface, enum, or record expected
  import java.nio.file.*;
  ^
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:18: error: class, interface, enum, or record expected
  import java.util.*;
  ^
  /home/runner/work/Azelux-Client/Azelux-Client/src/main/java/com/azeluxclient/util/WorldDownloader.java:19: error: class, interface, enum, or record expected
  import java.util.zip.Deflater;
  ^
  11 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.6.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 50s
1 actionable task: 1 executed
